--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,4 @@
 
 /.vs/final project/v17
 /final_project/.vs/final_project
-/final_project/bin/Debug/net8.0-windows/final_project.dll
-/final_project/bin/Debug/net8.0-windows/final_project.pdb
-/final_project/bin/Debug/net8.0-windows/final_project.exe
-/final_project/obj/Debug/net8.0-windows/ref/final_project.dll
-/final_project/obj/Debug/net8.0-windows/refint/final_project.dll
-/final_project/obj/Debug/net8.0-windows/final_project.dll
-/final_project/obj/Debug/net8.0-windows/final_project.pdb
-/final_project/obj/Debug/net8.0-windows/apphost.exe
-/final_project/obj/Debug/net8.0-windows/final_project.AssemblyInfo.cs
-/final_project/obj/Debug/net8.0-windows/final_project.AssemblyInfoInputs.cache
-/final_project/obj/Debug/net8.0-windows/final_project.sourcelink.json
+/final_project/bin/Debug/
