--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /final_project/obj/Debug/net8.0-windows/final_project.AssemblyInfo.cs
 /final_project/obj/Debug/net8.0-windows/final_project.AssemblyInfoInputs.cache
 /final_project/obj/Debug/net8.0-windows/final_project.sourcelink.json
+/.vs
+/final_project/.vs/ProjectEvaluation
