--- a/.gitignore
+++ b/.gitignore
@@ -8,22 +8,4 @@
 /.vs/cis297final/v17
 /.vs
 /final_project/.vs/ProjectEvaluation
-/final_project/obj/Debug/net8.0-windows/final_project.GeneratedMSBuildEditorConfig.editorconfig
-/final_project/obj/Debug/net8.0-windows/final_project.AssemblyInfo.cs
-/final_project/obj/Debug/net8.0-windows/final_project.AssemblyInfoInputs.cache
-/final_project/obj/Debug/net8.0-windows/final_project.assets.cache
-/final_project/obj/Debug/net8.0-windows/refint/final_project.dll
-/final_project/obj/Debug/net8.0-windows/apphost.exe
-/final_project/obj/Debug/net8.0-windows/final_project.csproj.CoreCompileInputs.cache
-/final_project/obj/Debug/net8.0-windows/final_project.csproj.GenerateResource.cache
-/final_project/obj/Debug/net8.0-windows/final_project.designer.runtimeconfig.json
-/final_project/obj/Debug/net8.0-windows/final_project.dll
-/final_project/obj/Debug/net8.0-windows/final_project.genruntimeconfig.cache
-/final_project/obj/Debug/net8.0-windows/final_project.pdb
-/final_project/obj/Debug/net8.0-windows/final_project.sourcelink.json
-/final_project/obj/final_project.csproj.nuget.dgspec.json
-/final_project/obj/final_project.csproj.nuget.g.props
-/final_project/obj/project.assets.json
-/final_project/obj/project.nuget.cache
-/final_project/obj/Debug/net8.0-windows/ref/final_project.dll
-/final_project/obj/Debug/net8.0-windows/final_project.Form1.resources
+/final_project/obj/Debug/
