Basic Logic for the enemy that chases you down. Attack functionality doesnt work properly yet, still firing basic shots. Y placement is not being set properly???

--- a/final_project/final_project.csproj
+++ b/final_project/final_project.csproj
@@ -40,6 +40,9 @@
     <None Update="Resources\ship_sprite.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\thatAsshole.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
