Chaser enemy now Properly* works *on occassion where enemy bugs out and goes offscreen, it will be automatically added to the "killed" enemies list
killed enemy and bullets to be removed have been moved from being declared in the gamelogic functions to being public static entites so that all classes can access them if need be

Added sprite for chaser enemy beam bullet (called "assholeBeam").

--- a/final_project/final_project.csproj
+++ b/final_project/final_project.csproj
@@ -25,6 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Resources\assholeBeam.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\enemyTest.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
