added new mini boss sprite

--- a/final_project/final_project.csproj
+++ b/final_project/final_project.csproj
@@ -37,6 +37,9 @@
     <None Update="Resources\ka1.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\miniboss.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\phaser.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
