added boulder png and start of score displayed at game over

--- a/final_project/final_project.csproj
+++ b/final_project/final_project.csproj
@@ -28,6 +28,9 @@
     <None Update="Resources\assholeBeam.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\boulder.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\enemyTest.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
