Added death sound!

--- a/final_project/final_project.csproj
+++ b/final_project/final_project.csproj
@@ -31,6 +31,9 @@
     <None Update="Resources\boulder.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\death.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\enemyTest.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
