--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /.vs
 /final_project/.vs/ProjectEvaluation
 /final_project/obj/Debug/
+/final_project/.vs/Galvaders/FileContentIndex/06a4aa63-13fb-44c8-9964-50373a28a0e3.vsidx
+/final_project/.vs/Galvaders/FileContentIndex/971ab8a8-d7e2-4041-bdf7-064c476afb39.vsidx
