--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /final_project/.vs/Galvaders/FileContentIndex/971ab8a8-d7e2-4041-bdf7-064c476afb39.vsidx
 /final_project/.vs/Galvaders/FileContentIndex/6331f45a-2b6a-4c70-a921-7f71067b1608.vsidx
 /final_project/.vs/Galvaders/FileContentIndex
+/final_project/bin/Release/Galvaders.zip
